--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Master en css con victor robles</title>
     <link rel="icon" type="favicon/x-icon" href="./img/supertux.png">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 
 <body>
@@ -61,7 +62,7 @@
                 <div class="card">
                     <p class="icon">u</p>
                     <h2 class="category">Rdes e internet</h2>
-                    <p class="description">Aprende a configurar y a administrar redes informaticas y servidores. Conviertete en un web master!!</p>
+                    <p class="description">Aprende a configurar y a administrar redes informaticas y servidores.</p>
                 </div>
                 <div class="card">
                     <p class="icon">a</p>
@@ -73,15 +74,16 @@
         </section>
 
         <!-- INICIO DE BARRA LATERAL -->
+        <div class="clearfix"></div>
         <aside id="lateral">
-            <h3>Buscar</h3>
+            <h3 class="aside-h3">Buscar</h3>
             <div id="search">
                 <form action="">
                     <input type="text">
                     <input type="button" value="L" class="icon">
                 </form>
             </div>
-            <h3>Login</h3>
+            <h3 class="aside-h3">Login</h3>
             <div id="login" class="aside-box">
                 <form action="">
                     <label for="" id="user" class="icon">U</label>
@@ -94,13 +96,13 @@
                     <a href="#">Has olvidado tu contraseña?</a>
                 </form>
             </div>
-            <h3>Redes Sociales</h3>
+            <h3 class="aside-h3">Redes Sociales</h3>
             <div id="social" class="aside-box">
                 <div class="twitter"><a href="" class="icon">t</a></div>
                 <div class="facebook"><a href="#" class="icon">f</a></div>
                 <div class="youtube"><a href="#" class="icon">y</a></div>
             </div>
-            <h3>Patrocinadores</h3>
+            <h3 class="aside-h3">Patrocinadores</h3>
             <div id="sponsors" class="aside-box"></div>
         </aside>
         <!-- Fin de barra lateral -->
